2005-09-13  Frederic Ruaudel <grumz@grumz.net> 0.7

	* nact/nautilus-actions-config.in: Fix problem with new config creation

	* po/*.po:
	* po/nautilus-actions.pot:
	* nact/nautilus-actions-config.glade: Fix mistake in tooltip text, add
information about Feature #73, add missed string and fix some problem in 
the GUI.

	* nact/nautilus-actions-config.in:
	* plugin/nautilus-actions-config.h:
	* plugin/nautilus-actions-config.c:
	* plugin/nautilus-actions-test.c: Add the possibility to add several 
file patterns (Feature #73). In NACT, add several file patterns separated
by semi-colon ';'

	* configure.in: Update version number

	* nact/nautilus-actions-config.in: Fix problem with system wide config 
overwritten by user not read correctly by NACT.

	* plugin/nautilus-actions-config.c:
	* nact/nautilus-actions-config.in: Add support for xml:lang in config
files. For NACT, it is only for the reader part. If the config is saved with 
NACT only the text of the current LANG will be saved.

	* po/*.po:
	* po/nautilus-actions.pot:
	* nact/nautilus-actions-config.in: Add missing strings in NACT (description
of the schemes)

2005-09-12  Frederic Ruaudel <grumz@grumz.net> 0.7
	
	* po/*.po: Fix Bad charset due to bad LANG setting when generated po
files with msginit.

	* configure.in:
	* fr.po: Add German translation (Gabriel Meier <gabriel.meier@web.de>)

2005-09-10  Frederic Ruaudel <grumz@grumz.net> 0.7

	* fr.po: Update French translation

	* configure.in:
	* nact/nact.desktop.in.in: Fix the problem with the icon path substitution 
(Bug#100)	

	* nact/nautilus-actions-config.in:
	* nact/nautilus-actions-config.glade: Use dynamic sizing for label of 
the config panel with SizeGroup to allow translation label text to display 
correctly if they are longer than the original ones.

	* nact/nautilus-actions-config.in: fix compilation error relative to 
i18n support

	* configure.in: Add LOCALEDIR in the list of @variable@ with AC_SUBST 
for the python script 
