@@ -264,7 +264,11 @@ class Config:
 
 class ConfigParser:
 	def __init__ (self):
-		self.lang = os.environ["LANG"][:2]
+		try:
+			self.lang = os.environ["LANG"][:2]
+		except KeyError:
+			self.lang = None
+		
 		self.uid = os.getuid ()
 		self.home_dir = pwd.getpwuid (self.uid)[5]
 		if self.uid == 0:
