@@ -1,3 +1,8 @@
+2005-09-15  Frederic Ruaudel <grumz@grumz.net> 0.8
+	
+	* nact/nautilus-actions-config.in: Fix the problem with nact not starting
+when $LANG var not set (Bug #108)
+
 2005-09-13  Frederic Ruaudel <grumz@grumz.net> 0.7
 
 	* nact/nautilus-actions-config.in: Fix problem with new config creation
